Add Tutorial code up to tutorial 100

--- a/ASPNETCORE_EmployeeManagement/appsettings.json
+++ b/ASPNETCORE_EmployeeManagement/appsettings.json
@@ -8,8 +8,8 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "EmployeeDBConnection": "server=WINDEV1910EVAL\\SQLEXPRESS;database=ASPCORE_EmployeeDB;Trusted_Connection=true",
-    "EmployeeDBConnection2": "server=DESKTOP-EDM4T41\\SQLEXPRESS;database=ASPCORE_EmployeeDB;Trusted_Connection=true"
+    "EmployeeDBConnection2": "server=WINDEV1910EVAL\\SQLEXPRESS;database=ASPCORE_EmployeeDB;Trusted_Connection=true",
+    "EmployeeDBConnection": "server=DESKTOP-EDM4T41\\SQLEXPRESS;database=ASPCORE_EmployeeDB;Trusted_Connection=true;MultipleActiveResultSets=True"
 
   },
   "MyKey": "Value of MyKey from appsettings.json"
